# ai-code-review

./: .gitignore  README.md  env.example  pyproject.toml
app/: __init__.py  config.py  debug_utils.py  main.py
app/agent/: __init__.py  prompt.py  runtime.py  schemas.py
app/agent/tools/: __init__.py  complexity.py  diff.py  registry.py  security.py
app/dev/: __init__.py  mock_gitlab_server.py  mock_openai_server.py
app/github/: __init__.py  adapter.py  client.py  schemas.py  webhook.py
app/gitlab/: __init__.py  adapter.py  client.py  schemas.py  webhook.py
app/indexing/: __init__.py  chunker.py  embed_utils.py  file_scanner.py  indexer.py  parser.py  repo_sync.py
app/infra/: __init__.py  cache.py  lock.py  rate_limit.py
app/llm/: __init__.py  client.py  embedding.py
app/review/: __init__.py  context.py  context_retrieval.py  diff_parser.py  models.py  orchestrator.py  planner.py  reviewer.py  synthesis.py
app/storage/: __init__.py  models.py  pg.py
scripts/: debug_index_dryrun.py
tests/: conftest.py  embedding.py  test_chunker.py  test_complexity.py  test_config.py  test_diff_chunk.py  test_diff_parser.py  test_embed_utils.py  test_embedding_retry.py  test_indexer_chunked.py  test_planner_schema.py
tmp/: local-testing.md
