[project]
name = "ai-code-review"
version = "0.1.0"
description = "Production-oriented AI code review service for GitLab merge requests."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "openai>=1.0.0",
  "pgvector>=0.2.5",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.8.2",
  "tree-sitter>=0.22.3",
  "tree-sitter-languages>=1.10.2",
  "uvicorn>=0.30.6",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]


